pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-auth-tls-secret-missing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-tls-secret-missing
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/nonexistent-secret"

spec:
  ingressClassName: nginx
  tls:
    - secretName: whoami-tls
      hosts:
        - auth-tls-secret-missing.localhost
  rules:
    - host: auth-tls-secret-missing.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
